tests/valid/io/v02_read_print.f
program readprint
  integer x
  read *, x
  print *, x
end
