tests/invalid/data/i18_data_too_many.f
program baddata
  integer x
  data x / 1, 2 /
end
